--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.22",
+    "gatsby-plugin-netlify": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-styled-components": "^3.0.6",
