--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.3",
-    "lint-staged": "^9.2.1"
+    "lint-staged": "^9.2.1",
+    "prettier": "^1.18.2"
   },
   "husky": {
     "hooks": {
